--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "core-js": "^3.32.2",
+    "firebase": "^10.4.0",
     "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
